# septal

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
docs/: casadi_ipopt.rst  conf.py
docs/_build/doctrees/: benchmark.doctree  index.doctree  quickstart.doctree
docs/_build/doctrees/__intersphinx_cache__/: jax_objects.inv
docs/_build/doctrees/api/: casadax_callbacks.doctree  casadax_factory.doctree  casadax_schema.doctree  casadax_solvers.doctree  casadax_utilities.doctree  jax_sqp_schema.doctree  jax_sqp_solver.doctree
docs/_build/html/: .buildinfo  algorithm.html  benchmark.html  casadi_ipopt.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: algorithm.doctree  (+3 more)
docs/api/: casadax_callbacks.rst  casadax_schema.rst  casadax_utilities.rst  index.rst  jax_sqp_convergence.rst  jax_sqp_qp.rst  jax_sqp_schema.rst  jax_sqp_solver.rst
src/casadinlp/: __init__.py  callbacks.py  factory.py  schema.py  solvers.py  utilities.py
src/casadinlp/sqp/: __init__.py  convergence.py  factory.py  hessian.py  line_search.py  qp_subproblem.py  solver.py
src/septal/: __init__.py
src/septal/casadax/: __init__.py  factory.py  schema.py  solvers.py  utilities.py
src/septal/jax/: __init__.py
tests/: conftest.py  test_callbacks.py  test_factory.py  test_schema.py  test_solvers.py  test_utilities.py
tests/sqp/: conftest.py  test_convergence.py  test_factory.py  test_hessian.py  test_line_search.py  test_qp_subproblem.py  test_schema.py  test_solver.py
(+51 files in other folders)
